--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,30 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs = -Xmx1G
+org.gradle.parallel = true
 # Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.21.5
-yarn_mappings=1.21.5+build.1
-loader_version=0.16.14
+minecraft_version = 1.21.5
+yarn_mappings = 1.21.5+build.1
+loader_version = 0.16.14
 # Mod Properties
 mod_version=1.0-SNAPSHOT
 maven_group=net.rose
 archives_base_name=rip-and-tear
 # Dependencies
-# check this on https://modmuss50.me/fabric.html
-fabric_version=0.124.2+1.21.5
+cardinal_components_version = 6.3.1
+midnightlib_version = 1.7.3+1.21.4-fabric
+fabric_version = 0.124.2+1.21.5
+strawberrylib_version = 1.21.5-r5
+tooltipfix_version = 1.1.1-1.21.5
+appleskin_version = mc1.21.5-3.0.6
+sodium_version = mc1.21.5-0.6.13-fabric
+iris_version = 1.8.11+1.21.5-fabric
+mod_menu_version = 14.0.0-rc.2
+# Chenille
+release_type = release
+modrinth_id = 6hN1V6wJ
+curseforge_id = 598056
+curseforge_versions = 1.21.5
+mr_requirements = fabric-api; strawberrylib
+cf_requirements = fabric-api; strawberrylib
+mr_embeddeds = midnightlib; tooltipfix
+cf_embeddeds = midnightlib; tooltipfix
